force-app/main/default/objects/Object_Relationships__c/Object_Relationships__c.object-meta.xml
<CustomObject>
    <description>used by code to create or update related object record from primary object record. For example - case to reference object.</description>
    <label>Object Relationships</label>
    <nameField>
        <displayFormat>Rel-{0000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>