force-app/main/default/objects/Object_Relationships__c/fields/Primary_Object_API_name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_API_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Object API name</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>