force-app/main/default/objects/Object_Relationships__c/fields/Primary_Object_Rcd_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_Rcd_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>record type name of primary object</inlineHelpText>
    <label>Primary Object Rcd Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>