force-app/main/default/objects/Object_Relationships__c/fields/Related_Object_Rcd_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Rcd_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>record type name of Related object</inlineHelpText>
    <label>Related Object Rcd Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>