force-app/main/default/objects/Object_Relationships__c/listViews/Opportunity_Relationships.listView-meta.xml
<ListView>
    <fullName>Opportunity_Relationships</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>Primary_Object_API_name__c</columns>
    <columns>Primary_Object_Rcd_Type__c</columns>
    <columns>Related_Object_API_name__c</columns>
    <columns>Related_Object_Rcd_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Primary_Object_Rcd_Type_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Object_API_name__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity Relationships</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>