force-app/main/default/objects/Object_Relationships__c/listViews/RefCreditRisk_Object_Relationship_records.listView-meta.xml
<ListView>
    <fullName>RefCreditRisk_Object_Relationship_records</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Primary_Object_API_name__c</columns>
    <columns>Primary_Object_Rcd_Type__c</columns>
    <columns>Related_Object_API_name__c</columns>
    <columns>Related_Object_Rcd_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Object_API_name__c</field>
        <operation>equals</operation>
        <value>Reference_Credit_Risk__c</value>
    </filters>
    <label>RefCreditRisk Object Relationship record</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>